--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
             <img src="https://miro.medium.com/v2/resize:fit:640/1*5RRuFZsIjIyzrIpGrfgwLQ.jpeg" alt="banner do filme">
         </div>
     </div>
-    
+
+    <div class="atores">
+        <div class="ator">
+            <img src="https://image.tmdb.org/t/p/original/lAi4ilbqoOIUDJyGPmy5ufKxk79.jpg" alt="Lana Condor">
+            <p>Lana Condor</p>
+        </div>
+        <div class="ator">
+            <img src="https://content.api.news/v3/images/bin/1aac1ed28e00cf173d6d24f9de41a222?width=1440" alt="Noah Centineo">
+            <p>Noah Centineo</p>
+        </div>
+        <div class="ator">
+            <img src="https://ntvb.tmsimg.com/assets/assets/574558_v9_bb.jpg" alt="Israel Broussard">
+            <p>Israel Broussard</p>
+        </div>
+
+</div>
 </body>
 </html>
